--- a/_config.yml
+++ b/_config.yml
@@ -27,7 +27,7 @@ author:
   location         : "Tainan, Taipei"
   employer         :
   pubmed           : 
-  googlescholar    : "https://scholar.google.com/citations?user=Yhh9EC8AAAAJ"
+  googlescholar    : "https://scholar.google.com/citations?user=koBVaaUAAAAJ"
   email            : "zuw408421476@gmail.com"
   researchgate     : 
   uri              :
