--- a/_config.yml
+++ b/_config.yml
@@ -7,7 +7,7 @@
 
 # Site Settings
 title                    : "Chia-Ming Lee"
-description              : "Master Candidate & IEEE Student Member"
+description              : "CV/DL Researcher"
 repository               : "ming053l/ming053l.github.io"
 google_scholar_stats_use_cdn : False
 
