--- a/_config.yml
+++ b/_config.yml
@@ -24,7 +24,7 @@ author:
   name             : "Chia-Ming Lee"
   avatar           : "images/chiaminglee.png"
   bio              : "National Cheng Kung University University (NCKU)"
-  location         : "Tainan, Taipei"
+  location         : "Tainan, Taiwan"
   employer         :
   pubmed           : 
   googlescholar    : "https://scholar.google.com/citations?user=koBVaaUAAAAJ"
