--- a/_config.yml
+++ b/_config.yml
@@ -23,7 +23,7 @@ baidu_site_verification  :  # get baidu_site_verification from https://ziyuan.ba
 author:
   name             : "Chia-Ming Lee"
   avatar           : "images/chiaminglee.png"
-  bio              : "National Cheng Kung University University (NCKU)"
+  bio              : "National Cheng Kung University (NCKU)"
   location         : "Tainan, Taiwan"
   employer         :
   pubmed           : 
