--- a/_config.yml
+++ b/_config.yml
@@ -6,9 +6,9 @@
 # `jekyll serve`. If you change this file, please restart the server process.
 
 # Site Settings
-title                    : "Chia-Ming Lee"
+title                    : "Yu-Fan Lin"
 description              : "CV/DL Researcher"
-repository               : "ming053l/ming053l.github.io"
+repository               : "VanLinLin/vanlinlin.github.io"
 google_scholar_stats_use_cdn : False
 
 # google analytics
@@ -21,14 +21,14 @@ baidu_site_verification  :  # get baidu_site_verification from https://ziyuan.ba
 
 # Site Author
 author:
-  name             : "Chia-Ming Lee"
-  avatar           : "images/chiaminglee.png"
-  bio              : "National Cheng Kung University (NCKU)"
-  location         : "Tainan, Taiwan"
+  name             : "Yu-Fan Lin"
+  avatar           : "images/van.jpg"
+  bio              : "National Chung Hsing University (NCHU)"
+  location         : "Taichung, Taiwan"
   employer         :
   pubmed           : 
-  googlescholar    : "https://scholar.google.com/citations?user=koBVaaUAAAAJ"
-  email            : "zuw408421476@gmail.com"
+  googlescholar    : 
+  email            : "aas12as12as12tw@gmail.com"
   researchgate     : 
   uri              :
   bitbucket        :
@@ -37,7 +37,7 @@ author:
   flickr           :
   facebook         :
   foursquare       :
-  github           : "ming053l"
+  github           : "VanLinLin"
   google_plus      :
   keybase          :
   instagram        :
@@ -45,7 +45,7 @@ author:
   lastfm           :
   linkedin         : # e.g., "linkedin username"
   dblp             : # e.g., "https://dblp.org/pid/xx/xxxx.html"
-  orcid            : "https://orcid.org/0009-0004-6027-3083"
+  orcid            : "https://orcid.org/0009-0000-9459-701X"
   pinterest        :
   soundcloud       :
   stackoverflow    : # http://stackoverflow.com/users/123456/username
