--- a/_config.yml
+++ b/_config.yml
@@ -6,58 +6,57 @@
 # `jekyll serve`. If you change this file, please restart the server process.
 
 # Site Settings
-title                    : "Yu-Fan Lin"
-description              : "CV/DL Researcher"
-repository               : "VanLinLin/vanlinlin.github.io"
-google_scholar_stats_use_cdn : False
+title: "Yu-Fan Lin"
+description: "CV/DL Researcher"
+repository: "VanLinLin/vanlinlin.github.io"
+google_scholar_stats_use_cdn: False
 
 # google analytics
-google_analytics_id      :  # get google_analytics_id from https://analytics.google.com/analytics/
+google_analytics_id: # get google_analytics_id from https://analytics.google.com/analytics/
 
 # SEO Related
-google_site_verification :  # get google_site_verification from https://search.google.com/search-console/about
-bing_site_verification   :  # get bing_site_verification from https://www.bing.com/webmasters/about
-baidu_site_verification  :  # get baidu_site_verification from https://ziyuan.baidu.com/login/index?u=/site/index
+google_site_verification: # get google_site_verification from https://search.google.com/search-console/about
+bing_site_verification: # get bing_site_verification from https://www.bing.com/webmasters/about
+baidu_site_verification: # get baidu_site_verification from https://ziyuan.baidu.com/login/index?u=/site/index
 
 # Site Author
 author:
-  name             : "Yu-Fan Lin"
-  avatar           : "images/van.jpg"
-  bio              : "National Chung Hsing University (NCHU)"
-  location         : "Taichung, Taiwan"
-  employer         :
-  pubmed           : 
-  googlescholar    : 
-  email            : "aas12as12as12tw@gmail.com"
-  researchgate     : 
-  uri              :
-  bitbucket        :
-  codepen          :
-  dribbble         :
-  flickr           :
-  facebook         :
-  foursquare       :
-  github           : "VanLinLin"
-  google_plus      :
-  keybase          :
-  instagram        :
-  impactstory      : # e.g., "https://profiles.impactstory.org/u/xxxx-xxxx-xxxx-xxxx"
-  lastfm           :
-  linkedin         : # e.g., "linkedin username"
-  dblp             : # e.g., "https://dblp.org/pid/xx/xxxx.html"
-  orcid            : "https://orcid.org/0009-0000-9459-701X"
-  pinterest        :
-  soundcloud       :
-  stackoverflow    : # http://stackoverflow.com/users/123456/username
-  steam            :
-  tumblr           :
-  twitter          : 
-  vine             :
-  weibo            :
-  xing             :
-  youtube          :
-  wikipedia        :
-
+  name: "Yu-Fan Lin"
+  avatar: "images/van.jpg"
+  bio: "National Cheng Kung University (NCKU)"
+  location: "Tainan, Taiwan"
+  employer:
+  pubmed:
+  googlescholar: "https://scholar.google.com.tw/citations?user=ook-p6wAAAAJ&hl=en"
+  email: "aas12as12as12tw@gmail.com"
+  researchgate:
+  uri:
+  bitbucket:
+  codepen:
+  dribbble:
+  flickr:
+  facebook:
+  foursquare:
+  github: "VanLinLin"
+  google_plus:
+  keybase:
+  instagram:
+  impactstory: # e.g., "https://profiles.impactstory.org/u/xxxx-xxxx-xxxx-xxxx"
+  lastfm:
+  linkedin: "vanlinlin"
+  dblp: # e.g., "https://dblp.org/pid/xx/xxxx.html"
+  orcid: "https://orcid.org/0009-0000-9459-701X"
+  pinterest:
+  soundcloud:
+  stackoverflow: # http://stackoverflow.com/users/123456/username
+  steam:
+  tumblr:
+  twitter:
+  vine:
+  weibo:
+  xing:
+  youtube:
+  wikipedia:
 
 # Reading Files
 include:
@@ -97,14 +96,12 @@ keep_files:
 encoding: "utf-8"
 markdown_ext: "markdown,mkdown,mkdn,mkd,md"
 
-
 # Conversion
 markdown: kramdown
 highlighter: rouge
 lsi: false
 excerpt_separator: "\n\n"
 incremental: false
-
 
 # Markdown Processing
 kramdown:
@@ -127,17 +124,14 @@ defaults:
       layout: default
       author_profile: true
 
-
 # Sass/SCSS
 sass:
   sass_dir: _sass
   style: compressed # http://sass-lang.com/documentation/file.SASS_REFERENCE.html#output_style
 
-
 # Outputting
 permalink: /:categories/:title/
 timezone: Asia/Taipei # http://en.wikipedia.org/wiki/List_of_tz_database_time_zones
-
 
 # Plugins
 plugins:
@@ -153,7 +147,6 @@ whitelist:
   - jekyll-gist
   - jekyll-feed
   - jemoji
-
 
 # HTML Compression
 # - http://jch.penibelst.de/
