--- a/_config.yml
+++ b/_config.yml
@@ -29,7 +29,7 @@ author:
   pubmed:
   googlescholar: "https://scholar.google.com.tw/citations?user=ook-p6wAAAAJ&hl=en"
   email: "aas12as12as12tw@gmail.com"
-  researchgate:
+  researchgate: https://www.researchgate.net/profile/Yu-Fan-Lin-5
   uri:
   bitbucket:
   codepen:
